ajuste colores y agregado de alert

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="nombre">Nombre</string>
     <string name="apellido">Apellido</string>
     <string name="userName">Nombre de usuario</string>
+    <string name="recovery_password">Olvide mi contraseña</string>
+    <string name="primer_text_registro">¿Aún no estas registrado? Hace click</string>
+    <string name="segundo_text_registro">Aqui</string>
 </resources>
